# prettyText

./: Cargo.toml  LICENSE  README.md  text.txt
.github/workflows/: PR-Check.yml  Release.yml
src/: main.rs  parser.rs  util.rs
