[package]
name = "pretty_text"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
image = "0.24.5"

[profile.release]
strip = true
opt-level = 1
lto = true
codegen-units = 1